--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fontsource/poppins": "^5.0.8",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
