--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     ]
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "daisyui": "^3.9.4",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.5"
   }
 }
